[package]
name = "pbft-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.3"
ed25519-dalek = "1.0.1"
futures = "0.3.28"
hex = "0.4.3"
md5 = "0.7.0"
# Use older version for compatibility with ed25519-dalek
rand = "0.7"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["tokio-macros", "tracing", "macros"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["json", "env-filter"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }

[dev-dependencies]
lazy_static = "1.4.0"
